# adli

./: .gitignore  AdliBeta.g4  CMakeLists.txt  build.sh  config.sh  main.cpp
include/: astdebug.h  astparser.h  filereader.h  tokenizer.h
include/nodes/: binary.h  identifier.h  literal.h  node.h  operator.h  statements.h  ternary.h  unary.h
scripts/: config-sln.sh  run.sh
src/: astdebug.cpp  astparser.cpp  filereader.cpp  main.cpp  node.cpp  tokenizer.cpp
src/nodes/: binary.cpp  identifier.cpp  literal.cpp  statements.cpp  ternary.cpp  unary.cpp
src/parser/: eat.cpp  error.cpp  expression.cpp  factor.cpp  peek.cpp  program.cpp  term.cpp
test/: main.adli  multiple_expressions.adli
